rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__bloomeffect__decoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: decoded_viewed
---
- referent: referent-0
  name: Bloom
  class: BloomEffect
  properties:
    Attributes:
      Attributes: {}
    Enabled:
      Bool: true
    Intensity:
      Float32: 0.45
    Size:
      Float32: 24.7
    Tags:
      Tags: []
    Threshold:
      Float32: 2.285
  children: []
