rbx_binary/src/weak/tests/snapshots/rbx_binary__weak__tests__util__bloomeffect__encoded.snap
---
source: rbx_binary/src/weak/tests/util.rs
expression: text_roundtrip
---
num_types: 1
num_instances: 1
chunks:
  - Inst:
      type_id: 0
      type_name: BloomEffect
      object_format: 0
      referents:
        - 0
  - Prop:
      type_id: 0
      prop_name: AttributesSerialize
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: Enabled
      prop_type: Bool
      values:
        - true
  - Prop:
      type_id: 0
      prop_name: Intensity
      prop_type: Float32
      values:
        - 0.45
  - Prop:
      type_id: 0
      prop_name: Name
      prop_type: String
      values:
        - Bloom
  - Prop:
      type_id: 0
      prop_name: Size
      prop_type: Float32
      values:
        - 24.7
  - Prop:
      type_id: 0
      prop_name: Tags
      prop_type: String
      values:
        - ""
  - Prop:
      type_id: 0
      prop_name: Threshold
      prop_type: Float32
      values:
        - 2.285
  - Prnt:
      version: 0
      links:
        - - 0
          - -1
  - End
